override overflow scroll to auto to fix picture fill

--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -2,6 +2,10 @@
   padding: 0;
 }
 
+.gm-style-iw-d {
+  overflow: auto !important;
+}
+
 .gm-ui-hover-effect {
   width: 36px !important;
 }
